--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <img src="./logo1.jpg" alt="OnlineMeals.com">
         </div>
         <ul>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">Services</a></li>
-            <li class="item"><a href="#">About Us</a></li>
-            <li class="item"><a href="#">Contact Us</a></li>
+            <li class="item"><a href="#home">Home</a></li>
+            <li class="item"><a href="#Service">Services</a></li>
+            <li class="item"><a href="#client-section">Clients</a></li>
+            <li class="item"><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
     <sectin id="home">
@@ -30,7 +30,7 @@
         <button class="btn">Order Now</button>
     </sectin>
 
-    <section class="services-container">
+    <section class="services-container" id="Service">
         <h1 class="h-primary1" style="text-align: center;">Our Services</h1>
         <div id="services">
             <div class="box">
